Fixed bg color changes overlapping border.

--- a/site/src/components/SolverView.css
+++ b/site/src/components/SolverView.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
 
   width: 10em;
-  height: calc(27em + 2px);
+  height: calc(27em + 12px);
   overflow-y: auto;
 
   border: 1px solid black;
