--- a/site/src/components/Sudoku.css
+++ b/site/src/components/Sudoku.css
@@ -5,7 +5,7 @@
   padding: 0;
 
   width: calc(27em + 2px);
-  height: calc(27em + 2px);
+  height: calc(27em + 12px);
 
   display: flex;
   flex-direction: column;
@@ -14,8 +14,6 @@
 }
 
 .row {
-  box-sizing: border-box;
-
   height: 3em;
 
   display: flex;
@@ -31,6 +29,7 @@
 
 .cell {
   box-sizing: border-box;
+  background-clip: content-box;
 
   width: 2em;
   height: 2em;
